<resources>
    <string name="app_name">QQ 版本列表实用工具</string>
    <string name="appTitle">QQ 版本列表实用工具</string>
    <string name="shortcutLongLabel">扫版（维护模式）</string>
    <string name="shortcutShortLabel">扫版（维护）</string>
    <string name="start">开始</string>
    <string name="cancel">取消</string>
    <string name="done">确定</string>
    <string name="save">保存</string>
    <string name="installed">已安装</string>
    <string name="copy">复制</string>
    <string name="refresh">刷新</string>
    <string name="agree">同意</string>
    <string name="disagreeAndExit">不同意并退出</string>
    <string name="withdrawConsentUA">撤回同意用户协议</string>
    <string name="withdrawConsentAndExit">撤回同意并退出</string>
    <string name="userAgreement">用户协议</string>
    <string name="enumerateVersionsFAB">扫版（维护模式）</string>
    <string name="enumerateVersionsDialogTitle">扫版（维护模式）</string>
    <string name="setting">设置</string>
    <string name="personalization">个性化</string>
    <string name="about">关于</string>
    <string name="enumerateVersionsFormatSetting">扫版直链格式设置</string>
    <string name="getUpdateFromTDSShiplyDistributionPlatform">TDS 腾讯端服务 Shiply 容器与发布平台更新获取（实验性）</string>
    <string name="getUpdateFromShiplyPlatform">Shiply 平台更新获取（实验性）</string>
    <string name="acceptedEnumerateVersion">扫版成功</string>
    <string name="contentReturnedByShiplyPlatform">Shiply 平台返回内容</string>
    <string name="applicationError">程序出错</string>
    <string name="additionalActions">进一步操作</string>
    <string name="shareTo">分享到</string>
    <string name="jsonDetails">JSON 详情</string>
    <string name="stableVersion">正式版</string>
    <string name="previewVersion">测试版</string>
    <string name="spaceEnumerateVersion">空格扫版</string>
    <string name="weixinEnumerateVersion">微信扫版</string>
    <string name="aboutAppName">QQ 版本列表实用工具 for Android™</string>
    <string name="aboutAuthor">作者：</string>
    <string name="aboutContributor">贡献者：</string>
    <string name="version">版本：</string>
    <string name="aboutSpecialThanksTo">特别感谢：</string>
    <string name="aboutOpenSourceRepo">开源仓库：</string>
    <string name="aboutGetUpdate">获取更新：</string>
    <string name="aboutDescription">提供 Android QQ 版本列表的查看和对 Android QQ 下载链接的枚举法扫描。</string>
    <string name="copied">已复制：</string>
    <string name="reatedFileSize">额定大小：</string>
    <string name="sourceJSON">源 JSON</string>
    <string name="recommendations">建议的内容</string>
    <string name="longPressTheVersionCardToViewSourceDetails">长按版本卡片查看源详情</string>
    <string name="useTheSystemDownloadManagerToTakeOverTheDownloadIntent">使用系统下载管理器</string>
    <string name="removeMultiplesOf5ForQQPreviewVersions">解除 QQ 测试版扫版小版本号遵循 5 的倍数限制</string>
    <string name="longPressToViewSourceDetailsIsDisabled">未开启长按查看源详情功能，请前往设置开启</string>
    <string name="currentSizeVsLargestHistoricalPackage">占比历史最大包（%s）：</string>
    <string name="extendTheSuffixForDirectDownloadLinksOfEnumeratedPreviewVersions">扩展测试版扫版直链后缀</string>
    <string name="fileSize">大小：</string>
    <string name="downloadLink">下载地址：</string>
    <string name="saved">已保存</string>
    <string name="enumQQPreviewWarning">鉴于 QQ 测试版可能存在不可预知的稳定性问题，您在下载及使用该测试版本之前，必须明确并确保自身具备足够的风险识别和承受能力。根据相关条款，您使用本软件时应当已了解并同意，因下载或使用 QQ 测试版而可能产生的任何直接或间接损失、损害以及其他不利后果，均由您自行承担全部责任。</string>
    <string name="enumQQMajorVersionHelpText">填写格式为 x.y.z</string>
    <string name="enumWeixinMajorVersionHelpText">无需填写小数点</string>
    <string name="enumWeixinWarning">微信扫版功能为 QQ 版本列表实用工具附带的实验性功能，可能存在不可预知的稳定性问题。请明确并确保自身具备足够的风险识别和承受能力。</string>
    <string name="enumHasBeenStopped">已停止扫描</string>
    <string name="missingCipherWarning">TDS 腾讯端服务 Shiply 容器与发布平台返回 JSON 内容中未包含“cipher_text”键值对。</string>
    <string name="missingMajorVersionWarning">扫版需要填写主版本号，否则无法执行扫版。</string>
    <string name="missingQQPreviewMinorVersionWarning">测试版扫版（含空格扫版）需要填写小版本号，否则无法扫描测试版。</string>
    <string name="QQPreviewMinorNot5Warning">小版本号需填写 5 的倍数。如需解除此限制，请前往设置进行解除。</string>
    <string name="missingWeixinTrueVersionWarning">微信扫版需要填写真实版本号，否则无法扫描微信版本。</string>
    <string name="missingWeixin16CodeWarning">微信扫版需要填写十六进制代码，否则无法扫描微信版本。</string>
    <string name="enumeratingDownloadLink">正在扫描下载地址：</string>
    <string name="majorVersion">主版本号</string>
    <string name="initialMinorVersion">起始小版本号</string>
    <string name="hexadecimalCode">十六进制代码</string>
    <string name="initialMinorVersionHelpText">填写起始扫描小版本号，扫正式版时无需填写</string>
    <string name="hexadecimalCodeHelpText">填写十六进制代码，仅微信扫版使用</string>
    <string name="enumType">扫版类型</string>
    <string name="enumTypeHelpText">指定扫版目标类型</string>
    <string name="trueVersion">真实版本号</string>
    <string name="trueVersionHelpText">填写真实版本号（版本码），仅微信扫版使用</string>
    <string name="appidOptional">appid（非必填）</string>
    <string name="shiplyGeneralOptionalHelpText">默认值：</string>
    <string name="shiplyVersion">版本</string>
    <string name="shiplyVersionHelpText">填写用于请求 Shiply 平台的 Android QQ/TIM 版本号</string>
    <string name="uinHelpText">填写用于请求 Shiply 平台的对象 QQ 号</string>
    <string name="shiplyWarning">腾讯 QQ/TIM 使用 TDS 腾讯端服务 Shiply 容器与发布平台，根据 QQ 号（uin）及其终端信息分发小范围灰度测试安装包。此功能并非每次请求都能成功获取到更新数据，无法获取更新数据则表示填写的参数不在 Shiply 平台认可与分发范围内。QQ 版本列表实用工具不对此功能及其任何后果作出任何可靠性保证。请明确并确保自身具备足够的风险识别和承受能力。</string>
    <string name="defaultDisplayOfFirstListItemDetails">首项卡片默认显示详情</string>
    <string name="versionNumberFontUseTCloudNumber">使用腾讯云数字字体</string>
    <string name="versionCardsDisplaysPackageSizeIndicator">显示额定包大小占比历史最大包指示条</string>
    <string name="customVersionEnumSuffix">自定义扫版后缀</string>
    <string name="customVersionEnumSuffixHelpText">请使用“, ”（西文逗号+空格）分割</string>
    <string name="facilitateI18n">协助翻译：</string>
    <string name="versionCardExpandButtonContentDescription">展开详情</string>
    <string name="versionCardCollapseButtonContentDescription">收起详情</string>
    <string name="shiplyAdvancedConfigurations">进阶配置</string>
    <string name="shiplyOsVersionOptional">osVersion（非必填）</string>
    <string name="shiplySdkVersionOptional">sdkVersion（非必填）</string>
    <string name="shiplyModelOptional">model（非必填）</string>
    <string name="shiplyLanguageOptional">language（非必填）</string>
    <string name="thicknessFollowSystem">跟随系统</string>
    <string name="back">返回</string>
    <string name="shiplyUseAdvancedConfigurations">使用进阶配置</string>
    <string name="localQQVersion">本机 QQ：</string>
    <string name="bracket">（%s）</string>
    <string name="localTIMVersion">本机 TIM：</string>
    <string name="localQQVersionDetails">本机 QQ 版本详情</string>
    <string name="localTIMVersionDetails">本机 TIM 版本详情</string>
    <string name="accessibilityTag">6IW+6K6vIFFRIOW3suS4iue6v+S4gOmhueaXoOmanOeijeeUqOaIt+S4k+WxnuS8mOWMluaOquaWveabtOaWsOOAguenu+WKqOe7iOerr+iuvuWkh+W8gOWQr+ezu+e7n+aXoOmanOeijeivu+Wxj+acjeWKoe+8iOWmgiBBbmRyb2lkIFRhbGtiYWNr44CBaU9TIFZvaWNlT3Zlcu+8ie+8jOW5tuWQjOaXtuS9v+eUqOiFvuiuryBRUSDnp7vliqjlrqLmiLfnq68gOS4wLjg1IOWPiuS7peS4iueJiOacrOaXtu+8jOiFvuiuryBRUSDlsIblh4/lsJHmiJblgZzmraLlkJHmraTnsbsgUVEg5a6i5oi356uv5LiL5Y+R5bm/5ZGK44CC</string>
    <string name="imageGallery">应用宣传图</string>
    <string name="share">分享</string>
    <string name="download">下载</string>
    <string name="stop">停止</string>
    <string name="skip">跳过</string>
    <string name="qqntTag">基于 QQNT 技术架构</string>
    <string name="releaseDateTIM">发布日期：</string>
    <string name="checkUpdateViaGitHubAPI">使用 GitHub REST API 检查更新</string>
    <string name="noUpdatesDetected">未检测到更新</string>
    <string name="noAssetsDetected">未检测到资产文件</string>
    <string name="cannotGetGitHub">无法连接到 GitHub，请确保您所在网络环境可以访问 GitHub。</string>
    <string name="updateQverbowAvailable">更新可用</string>
    <string name="copyLink">复制链接</string>
    <string name="unrealEngineTag">内置虚幻引擎</string>
    <string name="autoCheckForUpdates">启动时检查更新</string>
    <string name="useQQ8958Test">使用 QQ 8.9.58 测试版直链格式</string>
    <string name="ciVersionNoSupportUpdates">CI 构建版本不支持检查更新</string>
    <string name="showUnrealEngineTag">显示虚幻引擎标识</string>
    <string name="suffixSetting">后缀设置</string>
    <string name="others">其它</string>
    <string name="ok">好</string>
    <string name="swipeLeftToSeeMore">向左滑动查看更多</string>
    <string name="getUpdateFromTencentAppStore">腾讯应用宝更新获取（实验性）</string>
    <string name="experimentalFeatures">实验性功能</string>
    <string name="getQQLinkFromTencentAppStore">获取 QQ 下载直链</string>
    <string name="getTIMLinkFromTencentAppStore">获取 TIM 下载直链</string>
    <string name="getWeixinLinkFromTencentAppStore">获取微信下载直链</string>
    <string name="getWeComLinkFromTencentAppStore">获取企业微信下载直链</string>
    <string name="contentReturnedByTencentAppStore">腾讯应用宝返回内容</string>
    <string name="getWeTypeLinkFromTencentAppStore">获取微信输入法下载直链</string>
    <string name="tencentAppStoreWarning">腾讯应用宝更新获取功能为 QQ 版本列表实用工具附带的实验性功能，可能存在不可预知的稳定性问题。请明确并确保自身具备足够的风险识别和承受能力。</string>
    <string name="showOldLoading">扫版对话框使用旧版加载动画</string>
    <string name="versionCardsDisplaysPackageSizeText">显示额定包大小占比历史最大包百分比</string>
    <string name="timVersion">TIM 扫版</string>
    <string name="enumTIMWarning">TIM 扫版功能为 QQ 版本列表实用工具附带的实验性功能，可能存在不可预知的稳定性问题。请明确并确保自身具备足够的风险识别和承受能力。</string>
    <string name="useQQ9008_14600Test">扫版类型添加 QQ 9.0.8.14600 空格直链格式</string>
    <string name="initFirebaseService">初始化 Firebase 服务</string>
    <string name="enablingFirebaseServiceWarning">初始化 Firebase 服务后，将立即在本地由 Firebase SDK 生成注册令牌，并将标识符和配置数据上传到 Firebase 服务器。此操作一经启用即无法撤销，是否继续？</string>
    <string name="rainbow_notification_channel_id">rainbow_notification_channel_id</string>
    <string name="cannotFindGooglePlayServices">未在当前设备检测到 Google Play 服务，因此无法在当前设备中使用由 Firebase 提供的服务。</string>
    <string name="rainbow_notification_channel_title">版本列表更新</string>
    <string name="rainbow_notification_channel_description">通过 Firebase 云消息传递</string>
    <string name="enablingFirebaseServiceInsights">启用 Firebase 服务可使用以下功能：\n- 通过 Firebase 云消息传递的版本列表更新提醒</string>
    <string name="enablingFirebaseServiceWarning2">Firebase 云消息传递绑定了 Google Analytics 分析服务，使用 Firebase 云消息传递将不可避免地上传您在此软件的活跃信息。</string>
    <string name="continueKey">继续</string>
    <string name="initializedFirebaseService">Firebase 服务已初始化，无法撤销</string>
    <string name="cannotEnableFirebaseCloudMessaging">接收版本列表更新通知提醒必须打开系统通知权限，否则无法接收版本列表更新提醒。</string>
    <string name="pushSystemNotificationsWhenVersionListUpdates">版本列表更新时推送系统通知</string>
    <string name="unsubscribeTimeout">取消订阅超时</string>
    <string name="unsubscribeSuccess">取消订阅成功</string>
    <string name="unsubscribeFailed">取消订阅失败</string>
    <string name="subscribeTimeout">订阅超时</string>
    <string name="subscribeSuccess">订阅成功</string>
    <string name="subscribeFailed">订阅失败</string>
    <string name="initializedFirebaseServiceItem">Firebase 服务已初始化</string>
    <string name="toSystemSetting">前往系统设置</string>
    <string name="threePartySharedList">个人信息第三方共享清单</string>
    <string name="shiplyTargetApp">目标应用</string>
    <string name="shiplyTargetAppQQ">QQ</string>
    <string name="shiplyTargetAppTIM">TIM</string>
    <string name="shiplyTargetHelper">指定请求 Shiply 平台的目标应用</string>
    <string name="openSourceLicenseTitle">开放源代码许可</string>
    <string name="basedOnQQVer">基于 Android QQ %s 二次开发</string>
    <string name="getQidianLinkFromTencentAppStore">获取腾讯企点下载直链</string>
    <string name="getWeixinAlphaLinkFromWeixinConfigDesc">从腾讯服务器配置拉取微信最新测试版下载直链</string>
    <string name="successInGetting">获取成功</string>
    <string name="getWeixinAlphaConfig404">似乎未成功访问腾讯服务器配置文件，可能是微信当前没有测试版或测试版已撤包。</string>
    <string name="getWeixinAlphaConfigLink404">似乎未成功访问此下载地址，可能是微信当前测试版已撤包。</string>
    <string name="suspectedPackageWithdrawal">疑似撤包</string>
    <string name="colon">：</string>
    <string name="qverbowHash">杂凑值校验</string>
    <string name="showKuiklyTag">显示 Kuikly 开发框架标识</string>
    <string name="showKuiklyTagDesc">Kuikly 内置情况以 QQ 正式版为判断来源</string>
    <string name="versionCardsDisplaysPackageSizeDesc">仅对 QQ 版本卡片生效</string>
    <string name="aboutVersionCards">版本列表与卡片</string>
    <string name="showUnrealEngineTagDesc">虚幻引擎内置情况以 QQ 正式版为判断来源</string>
</resources>