<?xml version="1.0" encoding="utf-8"?><!--
    Qverbow Util
    Copyright (C) 2023 klxiaoniu

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU Affero General Public License as
    published by the Free Software Foundation, either version 3 of the
    License, or (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU Affero General Public License for more details.

    You should have received a copy of the GNU Affero General Public License
    along with this program.  If not, see <https://www.gnu.org/licenses/>.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AlwaysShowAction">

    <item
        android:id="@+id/btn_about"
        android:icon="@drawable/information_line"
        android:title="@string/about"
        app:showAsAction="always" />

    <item
        android:id="@+id/btn_setting"
        android:icon="@drawable/settings_line"
        android:title="@string/setting"
        app:showAsAction="always" />

    <item
        android:id="@+id/btn_get"
        android:icon="@drawable/refresh_line"
        android:title="@string/refresh"
        app:showAsAction="always" />

    <item
        android:id="@+id/btn_exp_features"
        android:icon="@drawable/flask_line"
        android:title="@string/experimentalFeatures"
        app:showAsAction="always" />

</menu>