<?xml version="1.0" encoding="utf-8"?><!--
    QQ Versions Tool for Android™
    Copyright (C) 2023 klxiaoniu

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU Affero General Public License as
    published by the Free Software Foundation, either version 3 of the
    License, or (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU Affero General Public License for more details.

    You should have received a copy of the GNU Affero General Public License
    along with this program.  If not, see <https://www.gnu.org/licenses/>.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="20dp"
    android:paddingTop="8dp"
    android:paddingEnd="20dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="20dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/get_qq"
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/getQQLinkFromTencentAppStore" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/get_tim"
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/getTIMLinkFromTencentAppStore" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/get_weixin"
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/getWeixinLinkFromTencentAppStore" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/get_wecom"
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/getWeComLinkFromTencentAppStore" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/get_wetype"
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/getWeTypeLinkFromTencentAppStore" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/get_qidian"
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/getQidianLinkFromTencentAppStore" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/guess_dialog_warning"
                style="?attr/materialCardViewOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:backgroundTint="?android:colorBackground">

                <TextView
                    android:id="@+id/tencent_app_store_warning"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:drawablePadding="4dp"
                    android:paddingStart="3dp"
                    android:paddingEnd="0dp"
                    android:text="@string/tencentAppStoreWarning"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="10sp"
                    app:drawableStartCompat="@drawable/error_warning_fill" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/tencent_app_store_back"
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/back" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
